--- a/templates/default_site/main.group/gracias.html
+++ b/templates/default_site/main.group/gracias.html
@@ -14,6 +14,8 @@
  	 telefono="{freeform:field:telefono}"
  {/exp:mandrillapp:send_email_admin_form}
 
+{freeform:field:email
+
 {/exp:freeform:entries}
 
 Muchas gracias por tu interés en SOAT la Positiva. En breve te estaremos contactando para completar el proceso de venta.
