--- a/templates/default_site/main.group/gracias.html
+++ b/templates/default_site/main.group/gracias.html
@@ -14,7 +14,7 @@
  	 telefono="{freeform:field:telefono}"
  {/exp:mandrillapp:send_email_admin_form}
 
-{freeform:field:email
+{freeform:field:email}
 
 {/exp:freeform:entries}
 
