--- a/templates/default_site/main.group/gracias.html
+++ b/templates/default_site/main.group/gracias.html
@@ -9,7 +9,7 @@
 
  {exp:mandrillapp:send_email_admin_form
  	 nombre="{freeform:field:first_name}"
- 	 to="rodulfojprieto@gmail.com"
+ 	 to="gms122@gmail.com"
  	 email_cliente="{freeform:field:email}"
  	 telefono="{freeform:field:telefono}"
  {/exp:mandrillapp:send_email_admin_form}
