--- a/templates/default_site/main.group/gracias.html
+++ b/templates/default_site/main.group/gracias.html
@@ -11,7 +11,7 @@
  	 nombre="{freeform:field:first_name}"
  	 to="gms122@gmail.com"
  	 email_cliente="{freeform:field:email}"
- 	 telefono="{freeform:field:telefono}"
+ 	 telefono="{freeform:field:telefono}"}
  {/exp:mandrillapp:send_email_admin_form}
 
 {freeform:field:email}
