--- a/templates/default_site/main.group/gracias.html
+++ b/templates/default_site/main.group/gracias.html
@@ -4,7 +4,7 @@
  {exp:mandrillapp:send_email_fulfill_form
  	 nombre="{freeform:field:first_name}"
  	 to="{freeform:field:email}"
- 	 telefono="{freeform:field:telefono}"
+ 	 telefono="{freeform:field:telefono}"}
  {/exp:mandrillapp:send_email_fulfill_form}
 
  {exp:mandrillapp:send_email_admin_form
