--- a/templates/default_site/main.group/gracias.html
+++ b/templates/default_site/main.group/gracias.html
@@ -9,13 +9,11 @@
 
  {exp:mandrillapp:send_email_admin_form
  	 nombre="{freeform:field:first_name}"
- 	 to="gms122@gmail.com"
+ 	 to="rodulfojprieto@gmail.com"
  	 email_cliente="{freeform:field:email}"
  	 telefono="{freeform:field:telefono}"}
  {/exp:mandrillapp:send_email_admin_form}
 
 {freeform:field:email}
-
-{/exp:freeform:entries}
 
 Muchas gracias por tu interés en SOAT la Positiva. En breve te estaremos contactando para completar el proceso de venta.
