--- a/templates/default_site/main.group/index.html
+++ b/templates/default_site/main.group/index.html
@@ -18,39 +18,14 @@
 </head>
 <body class="antialiased">
     <div class="row">
-        <div id="home" class="large-9 columns left-section">
-            <div class="row">
-                <div class="off-canvas-wrap hide-for-medium-up" data-offcanvas>
-                  <div class="inner-wrap">
-                    <nav class="tab-bar">
-                      <section class="left-small">
-                        <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
-                      </section>
-
-                      <section class="middle tab-bar-section">
-                        <h1 class="title">Foundation</h1>
-                      </section>
-                    </nav>
-                    <aside class="left-off-canvas-menu">
-                      <ul class="off-canvas-list">
-                        <li><label>Foundation</label></li>
-                        <li><a href="#">The Psychohistorians</a></li>
-                        <li><a href="#">...</a></li>
-                      </ul>
-                    </aside>
-                    <section class="main-section">
-                      <!-- content goes here -->
-                    </section>
-                    <a class="exit-off-canvas"></a>
-                  </div>
-                </div>
-            </div>
+        <div id="home" class="medium-9 large-9 columns left-section hide-for-small-only">
             <div class="row">
                 <div class="large-7 large-offset-1 columns">
                     <p class="orange">COMPRA TU</p>
                     <img src="img/soat.png" alt="">
                     <p class="orange">Y GÁNATE UNO DE LOS</p>
                     <p class="blue">6 KIA RIO 0KM</p>
+                    <a href="#" data-reveal-id="buy" class="button expand show-for-small-only">COMPRA TU SOAT</a>  
                 </div>
 
                 <div class="large-8 columns">
@@ -58,8 +33,100 @@
                 </div>
             </div>
         </div>
+        <div id="right-mobile-nav" class="show-for-small-only">
+            <div class="off-canvas-wrap" data-offcanvas>
+              <div class="inner-wrap">
+                <nav class="tab-bar">
+                  <section class="right-small">
+                    <a class="right-off-canvas-toggle menu-icon" href="#"><span></span></a>
+                  </section>
+                </nav>
+                <aside class="right-off-canvas-menu">
+                  <ul class="off-canvas-list">
+                    <li><a href="#acerca-de-mobile">ACERCA DE LA PROMOCIÓN</a></li>
+                    <li><a href="#formas-participar-mobile">FORMAS DE PARTICIPAR</a></li>
+                    <li><a href="#ganadores-mobile">GANADORES</a></li>
+                    <li><a href="http://www.vsi.lapositiva.com.pe/Chat/chat.php" target="_blank">CHAT</a></li>
+                  </ul>
+                </aside>
+                <section class="main-section">
+                    <div class="row">
+                        <div id="home" class="medium-9 large-9 columns left-section">
+                            <div class="row">
+                                <div class="large-7 large-offset-1 columns">
+                                    <p class="orange">COMPRA TU</p>
+                                    <img src="img/soat.png" alt="">
+                                    <p class="orange">Y GÁNATE UNO DE LOS</p>
+                                    <p class="blue">6 KIA RIO 0KM</p>
+                                    <a href="#" data-reveal-id="buy" class="button expand show-for-small-only">COMPRA TU SOAT</a>  
+                                </div>
 
-        <div id="right-section" class="large-3 columns hide-for-small-only">
+                                <div class="large-8 columns">
+                                    <img class="car" src="img/white.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div id="acerca-de-mobile">
+                            ACERCA DE LA PROMOCIÓN
+                            SORTEAMOS 6 AUTOS A RAZÓN DE UN AUTO POR MES. 
+                            Se realizarán seis sorteos en total: 25 de Agosto del 2014 / 25 de Setiembre del 2014 / 27 de Octubre del 2014 / 25 de Noviembre del 2014 / 29 de Diciembre del 2014 / 26 de Enero del 2015.
+                            PREMIO
+                            Te puedes ganar uno de los 6 autos Kia Rio STD con A/C del 2014.
+                            VIGENCIA Y ALCANCE
+                            Vigencia: Del 01 de Julio del 2014 al 31 de Diciembre del 2014. 
+                            Alcance: A Nivel Nacional.
+                            LUGAR DE SORTEOS
+                            Calle Dean Valdivia N° 173, San Isidro – Lima, Oficina de La Positiva Seguros. En presencia de un notario público y de un representante del ministerio del interior.
+                            PRODUCTOS
+                            Los productos que participan son el SOAT de uso particular, carga, urbano o el seguro vehicular Pack Vehicular. Todos los productos adquiridos durante la vigencia de la campaña participan en todos los sorteos.
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div id="formas-participar-mobile">
+                            FORMAS DE PARTICIPAR
+
+                            COMPRA TU SOAT O EL PACK VEHICULAR DURANTE LA VIGENCIA DE LA CAMPAÑA Y AUTOMÁTICAMENTE ESTÁS PARTICIPANDO
+
+                            MULTIPLICA TUS OPCIONES
+                            ¡Puedes multiplicar tus opciones para ganar uno de estos autos!
+                            Si compras un SOAT = 01 opción
+                            Si compras un Pack Vehicular = 01 opción
+                            Si tu SOAT anterior era de La Positiva y estas renovándolo con nosotros = 02 opciones
+                            Además, si compras tu SOAT y aprovechas en comprar también un Pack Vehicular cuadriplicas tus opciones!!
+                            ¡Nunca ganarse un auto cero Kilómetros ha sido tan fácil!
+                            PUNTOS DE VENTA
+                            Más de 2,000 puntos de venta a nivel nacional en oficinas, módulos de La Positiva, comercializadores o con tu corredor de seguros.
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div id="ganadores-mobile">
+                            GANADORES
+                            AUN NO TENEMOS AL PRIMER GANADOR
+                            PRIMER SORTEO: _____________________
+                            25 de AGOSTO del 2014
+
+                            ¿Cómo me entero si gane?
+                            Una vez realizado cada sorteo nos contactaremos por teléfono con la persona ganadora de acuerdo a los datos consignados en la póliza/certificado. Es por esto que es muy importante toda la información de contacto que nos brindes sea correcta.
+
+                            ¿Y si no gané nada después del primer sorteo?
+                            ¡Todavía puedes participar y ganar! Todos los productos adquiridos durante la vigencia de la campaña participan en todos los sorteos. 
+
+                            Por ejemplo, si adquiriste uno de los productos participantes durante el primer mes de campaña tienes la opción de participar en los seis sorteos. Si lo adquiriste durante el segundo mes de campaña, tienes la opción de participar en los cinco sorteos restantes, y así sucesivamente. 
+                            Y claro que mantienes el mismo número de opciones que con tu primera compra.
+
+                            Condiciones Legales
+                            Ver Términos y Condiciones (link a TyC)
+                        </div>
+                    </div>
+
+                </section>
+                <a class="exit-off-canvas"></a>
+              </div>
+            </div>
+        </div>
+        <div id="right-section" class="medium-3 large-3 columns hide-for-small-only">
             <div class="overlay"></div>
             <div class="row">
                 <div class="large-10 large-centered columns">
@@ -89,16 +156,19 @@
                         <a href="#" class="show-for-medium-up" data-reveal-id="terms">Términos y Condiciones</a>
                         <a href="#" class="show-for-small-only" target="_blank">Términos y Condiciones</a>
                     </li>
+                    <li>
+                        <a href="#" class="show-for-medium-up" data-reveal-id="contacto">Contáctenos</a>
+                    </li>
                 </ul>
             </div>
             <div class="large-2 columns">
-                <a class="right" href="#" data-reveal-id="myModal"><img src="img/logo_blanco.png" alt=""></a>
+                <a class="right" href="http://www.lapositiva.com.pe/" target="_blank"><img src="img/logo_blanco.png" alt=""></a>
             </div>
         </div>
     </div>
 
     <div class="row">
-        <div id="acerca-de" class="large-9 columns left-section">
+        <div id="acerca-de" class="medium-9 large-9 columns left-section hide-for-small-only">
             <div class="row">
                 <div id="head" class="large-11 large-offset-1 columns">
                     <h2 class="orange">ACERCA DE LA PROMOCIÓN</h2>
@@ -108,7 +178,7 @@
                 <div id="car-timeline" class="large-11 large-offset-1 columns">
                     <div class="row">
                         <div class="large-3 columns">
-                            <p class="orange left-text">6 AUTOS KIA RIO STD CON A/C DEL 2014</p>
+                            <p class="orange left-text">TE PUEDES GANAR UNO DE LOS 6 KIA RIO STD 0KM</p>
                         </div>
                         <div class="large-9 columns">
                             <img src="img/cars-timeline.png" alt="">
@@ -118,9 +188,9 @@
 
                 <div class="large-11 large-offset-1 columns">
                     <div class="row">
-                        <div id="hexagon" class="large-5 columns">
+                        <div id="hexagon" class="medium-9 large-5 columns">
                             <div class="row">
-                                <div class="large-8 large-centered columns text-center">
+                                <div class="large-8 large-centered columns text-center medium-centered">
                                     <p class="gray hex-text">PROMOCIÓN A NIVEL NACIONAL. DEL 01 DE JULIO AL 31 DE DICIEMBRE DEL 2014</p>
                                 </div>
                             </div>
@@ -149,7 +219,7 @@
     </div>
 
     <div class="row">
-        <div id="formas-participar" class="large-9 columns left-section">
+        <div id="formas-participar" class="medium-9 large-9 columns left-section hide-for-small-only">
             <div class="row">
                 <div id="head" class="large-11 large-offset-1 columns">
                     <h2 class="orange">FORMAS DE PARTICIPAR</h2>
@@ -178,7 +248,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="large-2 medium-12 columns">
+                        <div class="large-2 medium-2 columns">
                             <img id="flecha" src="img/flecha.png" alt="">
                         </div>
                         <div class="large-5 medium-5 small-10 columns">
@@ -196,11 +266,11 @@
                             <div class="row">
                                 <div class="large-12 columns">
                                     <img src="img/icon-pack.png" alt="">
-                                    <p class="label-gray gray">1 PACK</p>
+                                    <p class="label-gray gray">1 PACK VEHICULAR</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="large-2 medium-12 columns">
+                        <div class="large-2 medium-2 columns">
                             <img id="flecha" src="img/flecha.png" alt="">
                         </div>
                         <div class="large-5 medium-5 small-10 columns">
@@ -222,7 +292,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="large-2 medium-12 columns">
+                        <div class="large-2 medium-2 columns">
                             <img id="flecha" src="img/flecha.png" alt="">
                         </div>
                         <div class="large-5 medium-5 small-10 columns">
@@ -247,7 +317,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="large-2 medium-12 columns">
+                        <div class="large-2 medium-2 columns">
                             <img id="flecha" src="img/flecha.png" alt="">
                         </div>
                         <div class="large-5 medium-5 small-10 columns">
@@ -272,7 +342,7 @@
     </div>
 
     <div class="row">
-        <div id="ganadores" class="large-9 columns left-section">
+        <div id="ganadores" class="medium-9 large-9 columns left-section hide-for-small-only">
             <div class="row">
                 <div id="head" class="large-11 large-offset-1 columns">
                     <h2 class="orange">GANADORES</h2>
@@ -295,23 +365,94 @@
         </div>
     </div>
 
-    <div id="buy" class="reveal-modal small" data-reveal>
-        {exp:freeform:form form_name="contacto_soat" return="main/gracias"}
-        <p class="orange">danos tus datos y en breve te estaremos contactando para completar el proceso de compra</p>
-        <input type="text" placeholder="Nombre" name="first_name" >
-        <input type="text" placeholder="Correo" name="email" >
-        <input type="text" placeholder="Teléfono" name="telefono" >
+     <div id="buy" class="reveal-modal small" data-reveal>
+      {exp:freeform:form form_name="contacto_soat" return="main/gracias" required="first_name|email|telefono" form:data-abide=""}
+        <p class="orange">danos tus datos y en breve te contactaremos para completar el proceso de compra</p>
+        <div class="name-field">
+          <input type="text" placeholder="Nombre" name="first_name" required>
+          <small class="error">Por favor ingresar el nombre.</small>
+        </div>
+
+        <div class="email-field">
+          <input type="text" placeholder="Correo" name="email" required pattern="email">
+          <small class="error">Por favor ingresar un correo valido.</small>
+        </div>
+
+        <div class="telefono-field">
+          <input data-invalid="" name="telefono" placeholder="Teléfono" pattern="telef" required="" maxlength="9" type="text">
+          <small class="error">Por favor ingresar su telefono (numérico).</small>
+        </div>
 
         <button type="submit" name="submit" class="button">Enviar</button>
 
-        {/exp:freeform:form}
+      {/exp:freeform:form}
         <a class="close-reveal-modal">&#215;</a>
     </div>
+
+    <div id="terms" class="reveal-modal" data-reveal>
+        <h3 class="text-center orange">TERMINOS Y CONDICIONES</h3>
+        <h4><b>Nombre de Campaña:</b></h4>
+        <p>Tu SOAT de La Positiva viene con un 0 Kilómetros</p>
+        <h4><b>Vigencia:</b></h4>
+        <p>Del 01 de Julio al 31 de Diciembre del 2014</p>
+        <h4><b>Cobertura:</b></h4>
+        <p>Nivel Nacional</p>
+        <h4><b>Mecánica:</b></h4>
+        <p>Las personas naturales (mayores de edad) y jurídicas que compren un SOAT de uso particular, carga o urbano, o un seguro vehicular “Pack Vehicular”, en cualquier establecimiento a nivel nacional donde se vendan dichos productos de La Positiva Seguros, entre el 01 de Julio del 2014 y el 31 de Diciembre del 2014, automáticamente contarán opciones electrónicas para participar en el sorteo de 06 autos KIA Rio STD con A/C y MDPS MT Sedán: Año de fabricación 2014.</p><br>
+        <h4>Las opciones electrónicas se otorgarán según la relación de compra siguiente:</h4>
+        <p>Seguro de SOAT particular, carga o urbano: <b class="orange">01 opción</b></p>
+        <p>Seguro Vehicular “Pack Vehicular”: <b class="orange">01 opción</b></p>
+        <p>Renovación de SOAT de La Positiva de uso particular, carga o urbano: <b class="orange">02 opciones.</b></p>
+        <p>Seguro de SOAT particular, carga o urbano y Pack Vehicular: <b class="orange">04 opciones.</b></p><br>
+        <p>La opción electrónica se identificará con el número que aparece en el recuadro “número de póliza” los productos antes mencionados.</p>
+        <p>Se sortearán 06 autos KIA RIO STD con A/C y MDPS SEDAN, año de fabricación 2014, a razón de un auto por mes, desde agosto del 2013 hasta enero del 2014, en presencia de un Notario Público y un representante del Ministerio del Interior.</p>
+
+        <h3 class="orange">Fechas de Sorteo:</h3>
+        <ul>
+            <li>25 de Agosto del 2014</li>
+            <li>25 de Setiembre del 2014</li>
+            <li>27 de Octubre del 2014</li>
+            <li>25 de Noviembre del 2014 </li>
+            <li>29 de Diciembre del 2014</li>
+            <li>26 de Enero del 2015</li>
+        </ul>
+
+        <h3 class="orange">Lugar de Sorteo:</h3>
+        <p>Calle Dean Valdivia N° 173, San Isidro, Lima-Perú</p><br><br>
+
+        Condiciones adicionales:
+        Los colaboradores de La Positiva Seguros, La Positiva Vida y La PositivaSanitas EPS no podrán participar de ninguno de los sorteos.
+
+        Se avisará a los ganadores a través de una llamada por teléfono. El certificado ganador no podrá participar nuevamente en los sorteos restantes.
+         
+        Los premios se entregarán en la ciudad de Lima y no podrán canjearse por otro bien o especie. El color de los autos a entregar como premios será definido por La Positiva Seguros. En caso se tengan ganadores en provincias, La Positiva Seguros no correrá con ninguno de los gastos en que dichos ganadores incurran para venir a Lima a recibir el premio.
+
+        <br>RD Nro. 2714-2013-IN-ONAGI-DAE
+        <a class="close-reveal-modal">&#215;</a>
+    </div>
+
+    <div id="contacto" class="reveal-modal" data-reveal>
+        <img style="width:100%;" src="img/banner.png" alt="Contáctanos">
+        <a class="close-reveal-modal">&#215;</a>
+    </div>
+    <div id="chat"><a href="http://www.vsi.lapositiva.com.pe/Chat/chat.php" target="_blank"></a></div>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="js/app.js"></script>
     <script>
+        $( document ).ready(function() {
+          setTimeout(function(){
+            $('#chat').animate({width: 'toggle'});
+          }, 2000);
+
+          $('.off-canvas-list a').on('click', function(){
+            setTimeout(function(){
+                $('.off-canvas-wrap').removeClass('move-left');
+            }, 1000);
+          });
+        });
+        
         $(function() {
           $('a[href*=#]:not([href=#])').click(function() {
             if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
