--- a/templates/default_site/main.group/index.html
+++ b/templates/default_site/main.group/index.html
@@ -46,6 +46,7 @@
                     <li><a href="#acerca-de-mobile">ACERCA DE LA PROMOCIÓN</a></li>
                     <li><a href="#formas-participar-mobile">FORMAS DE PARTICIPAR</a></li>
                     <li><a href="#ganadores-mobile">GANADORES</a></li>
+                    <li><a href="#agencias-mobile">AGENCIAS</a></li>
                     <li><a href="http://www.vsi.lapositiva.com.pe/Chat/chat.php" target="_blank">CHAT</a></li>
                   </ul>
                 </aside>
@@ -102,6 +103,27 @@
 
                     <div class="row">
                         <div id="ganadores-mobile">
+                            GANADORES
+                            AUN NO TENEMOS AL PRIMER GANADOR
+                            PRIMER SORTEO: _____________________
+                            25 de AGOSTO del 2014
+
+                            ¿Cómo me entero si gane?
+                            Una vez realizado cada sorteo nos contactaremos por teléfono con la persona ganadora de acuerdo a los datos consignados en la póliza/certificado. Es por esto que es muy importante toda la información de contacto que nos brindes sea correcta.
+
+                            ¿Y si no gané nada después del primer sorteo?
+                            ¡Todavía puedes participar y ganar! Todos los productos adquiridos durante la vigencia de la campaña participan en todos los sorteos. 
+
+                            Por ejemplo, si adquiriste uno de los productos participantes durante el primer mes de campaña tienes la opción de participar en los seis sorteos. Si lo adquiriste durante el segundo mes de campaña, tienes la opción de participar en los cinco sorteos restantes, y así sucesivamente. 
+                            Y claro que mantienes el mismo número de opciones que con tu primera compra.
+
+                            Condiciones Legales
+                            Ver Términos y Condiciones (link a TyC)
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div id="agencias-mobile">
                             GANADORES
                             AUN NO TENEMOS AL PRIMER GANADOR
                             PRIMER SORTEO: _____________________
