--- a/templates/default_site/main.group/index.html
+++ b/templates/default_site/main.group/index.html
@@ -160,6 +160,7 @@
                         <li><a href="#acerca-de">ACERCA DE LA PROMOCIÓN</a></li>
                         <li><a href="#formas-participar">FORMAS DE PARTICIPAR</a></li>
                         <li><a href="#ganadores">GANADORES</a></li>
+                        <li><a href="#agencias">AGENCIAS</a></li>
                     </ul>
                 </div>
             </div>
