--- a/templates/default_site/main.group/index.html
+++ b/templates/default_site/main.group/index.html
@@ -388,6 +388,30 @@
         </div>
     </div>
 
+    <div class="row">
+        <div id="agencias" class="medium-9 large-9 columns left-section hide-for-small-only">
+            <div class="row">
+                <div id="head" class="large-11 large-offset-1 columns">
+                    <h2 class="orange">GANADORES</h2>
+                </div>
+
+                <div class="large-11 large-offset-1 columns">
+                    <div class="row">
+                        <div class="large-5 columns">
+                            <p class="orange">AUN NO TENEMOS AL <span>PRIMER GANADOR</span></p>
+                            <p class="gray"><span>PRIMER SORTEO:</span></p>
+                            <p class="orange">25 de <span>AGOSTO</span> del 2014</p>
+                        </div>
+                        <div id="info-winners" class="large-7 columns">
+                            <img class="car" src="img/white.png" alt="">
+                            <p class="orange vim">¡NUNCA GANARSE UN <span>AUTO CERO KILÓMETROS HA SIDO TAN FÁCIL!</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
      <div id="buy" class="reveal-modal small" data-reveal>
       {exp:freeform:form form_name="contacto_soat" return="main/gracias" required="first_name|email|telefono" form:data-abide=""}
         <p class="orange">danos tus datos y en breve te contactaremos para completar el proceso de compra</p>
