--- a/templates/default_site/main.group/index.html
+++ b/templates/default_site/main.group/index.html
@@ -505,7 +505,7 @@
           evt.preventDefault();
           $.ajax({
                  type: "POST",
-                 url: "/?/main/agencia/",
+                 url: "/?/content/agencia/",
                  data: str, // serializes the form's elements.
                  success: function(response)
                  { // show response from the php script.
@@ -530,7 +530,7 @@
               evt.preventDefault();
               $.ajax({
                      type: "POST",
-                     url: "/?/main/distrito/",
+                     url: "/?/content/distrito/",
                      data: str, // serializes the form's elements.
                      success: function(response)
                      { // show response from the php script.
