--- a/templates/default_site/main.group/index.html
+++ b/templates/default_site/main.group/index.html
@@ -396,9 +396,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="row">
-                    <div id="result" class="large-12 columns">
-                    </div>
+                <div id="result" class="large-11 large-offset-1 columns">
                 </div>
             </div>
         </div>
